# grid

./: distributed.cabal  grid.cabal
Data/: Distributed.hs
Data/Distributed/: AST.hs  Expression.hs  Local.hs  Symantics.hs
Grid/: AST.hs  Exp.hs  Foo.txt  Local.hs  Symantics.hs
