name:          grid
category:      Distributed Computing
version:       0.1
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/grid/
copyright:     Copyright (C) 2011 Edward A. Kmett
synopsis:      Distributed heterogeneous computing
description:   Distributed heterogeneous computing
build-type:    Simple

source-repository head
  type: git
  location: git://github.com/ekmett/grid.git

library
  default-language: Haskell2010
  other-extensions
    GADTs,
    Rank2Types,
    TypeFamilies,
    TypeOperators,
    KindSignatures,
    ConstraintKinds,
    FlexibleContexts,
    FlexibleInstances,
    FunctionalDependencies,
    GeneralizedNewtypeDeriving

  build-depends:
    base         >= 4       && < 5,
    ghc-prim,
    transformers >= 0.2     && < 0.4,
    containers   >= 0.3     && < 0.6,
    comonad      >= 1.1.1.5 && < 1.2

  exposed-modules:
    Grid.Symantics
    Grid.Local
    Grid.AST

  ghc-options: -Wall
